# project-mads

./: .dockerignore  .env.prod  .gitignore  LICENSE  Makefile  README.md  check_db.py  pyproject.toml  test.py  test_chart.py
api/: deps.py  main.py
api/agents/: graph.py  nodes.py  old_nodes.py  olist_schema.py  state.py  test_flow.py
api/agents/guardrails/: sql_guard.py
api/agents/nodes/: analyst_node.py  memory_node.py  sql_node.py  supervisor_node.py  writer_node.py
api/agents/prompts/: analyst.md  sql.md  supervisor.md  writer.md
api/agents/tools/: rag.py  test_tool.py
api/enums/: file_status.py  file_type.py
api/models/: __init__.py  chat_box.py  geolocation.py  markdown.py  message.py  olist_customer.py  olist_order.py  olist_order_item.py  olist_order_payment.py  olist_product.py  olist_seller.py  physic_file.py  session_file.py  user.py
api/repositories/: file_repo.py  message_repo.py  user_repo.py
api/routes/: chat.py  doc.py  user.py
api/schemas/: chat.py  file.py
api/services/: auth_service.py  chat_service.py
api/services/ingestion/: chunk.py  embed.py  parse.py  upload.py
api/tasks/: ingestion.py
api/utils/: chart_parser.py  logging_config.py
backend/: pyproject.toml
backend/api/: deps.py  main.py
backend/api/agents/: state.py
backend/api/enums/: file_type.py
backend/api/models/: chunk.py  customer.py  geolocation.py  olist_customer.py  olist_order.py  olist_order_item.py  olist_order_payment.py  olist_seller.py  physic_file.py  product.py  session_file.py
backend/api/repositories/: user_repo.py
backend/api/routes/: chat.py  doc.py  user.py
backend/api/schemas/: chat.py  user.py
backend/api/services/: auth_service.py  file_service.py
backend/api/services/ingestion/: embed.py  upload.py
backend/api/tasks/: ingestion.py
backend/core/: config.py  minio.py  postgres.py  worker.py
backend/data/: exploration.py  ingestion.py
backend/mcp_server/: main.py
backend/mcp_server/resources/: db_schemas.py
backend/mcp_server/tools/: sqls_tool.py
core/: checkpointer.py  config.py  embedder.py  llm.py  minio.py  postgres.py  qdrant.py
data/: ingestion.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChartViewer.css  ChartViewer.jsx  ChatArea.css  ChatArea.jsx  ChatLayout.css  ChatLayout.jsx  FileUpload.css  FileUpload.jsx  HITLApproval.css  HITLApproval.jsx  Login.css  Login.jsx  PlotlyChart.jsx  Register.jsx  Sidebar.css  Sidebar.jsx  ToolExecutionLog.css  ToolExecutionLog.jsx
frontend/src/context/: AuthContext.jsx
infras/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infras/compose/init/: 01-create-readonly-user.sh
infras/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestion  Dockerfile.mcp  Dockerfile.sandbox  Dockerfile.sandbox_api
mcp_server/: database.py  main.py  server.py
mcp_server/resources/: db_schemas.py
mcp_server/tools/: codes_tool.py  sqls_tool.py
nginx/: nginx-http.conf  nginx-https.conf
notes/: note_1.txt  note_2.txt  note_3.txt
sandbox_api/: main.py
sandbox_api/core/: config.py  minio.py
sandbox_api/utils/: file_utils.py
scripts/: add_new_lib.txt  grant_readonly.sql
