[project]
name = "mads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.90",
    "pandas>=3.0.2",
    "asyncpg>=0.30.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
api = [
    "celery>=5.6.3",
    "docling>=2.90.0",
    "fastapi",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "uvicorn",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tiktoken>=0.12.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "langgraph>=1.1.10",
    "langchain-core>=1.3.2",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.3",
    "langchain-openai>=1.2.1",
    "langchain>=1.2.17",
    "mcp>=1.27.0",
    "langchain-mcp-adapters>=0.2.2",
    "httpx>=0.28.1",
    "gunicorn>=26.0.0",
]
ingestion = [
    "pandas>=3.0.2",
    "kaggle>=2.0.1",
    "psycopg[binary]>=3.3.3",
]
mcp-server = [
    "mcp[cli]>=1.27.0",
    "uv>=0.11.7",
]

sandbox = [
    "pydantic>=2.13.0",
    "fastapi",
    "uvicorn",
    "docker>=7.1.0",
    "plotly>=6.7.0",
    "minio>=7.2.20",
    "apscheduler>=3.11.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
