[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
]
ingestion = [
    "pandas>=3.0.2",
    "kaggle",
]