[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.90",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
api = [
    "celery>=5.6.3",
    "fastapi",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "uvicorn",
]
ingestion = [
    "pandas>=3.0.2",
    "kaggle>=2.0.1",
]
