[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.90",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
api = [
    "celery>=5.6.3",
    "docling>=2.90.0",
    "fastapi",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "uvicorn",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tiktoken>=0.12.0",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
]
ingestion = [
    "pandas>=3.0.2",
    "kaggle>=2.0.1",
]
mcp-server = [
    "mcp[cli]>=1.27.0",
    "uv>=0.11.7",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
